--- a/conflict/readme
+++ b/conflict/readme
@@ -1,3 +1,3 @@
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Change requested by step 11.
+Change requested by step 11. Had to do another commit for 11 as I forgot to close issue 2. Issue 2 is labled #4.
